icm-macros/testing/pack/errors/BadContract.sol
pragma solidity ^0.8.30;

// #[pack(contract = "NonExistent")]
struct MyStruct {
    uint256 value;
}